tests/invalid/MethodCall_Invalid_3.whiley
import * from whiley.lang.*

void ::main(System.Console sys,[string] this):
    this.f(1)
